--- a/uvm_input.yml
+++ b/uvm_input.yml
@@ -1,9 +1,1 @@
-UserName: GeeksforGeeks
-Password: GFG@123
-Phone: 1234567890
-Website: geeksforgeeks.org
-Skills:
-  -Python
-  -SQL
-  -Django
-  -JavaScript
+File_Name: fifo
